--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
+  "engines": {
+    "node": "16.x"
+  },
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "build": "npm i"
   },
   "keywords": [],
   "author": "",
