--- a/vercel.json
+++ b/vercel.json
@@ -2,26 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "./index.js",
+      "src": "index.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "/videos/(.*)",
-      "dest": "/videos"
-    },
-    {
-      "src": "/comments/(.*)",
-      "dest": "/comments"
-    },
-    {
-      "src": "/products/(.*)",
-      "dest": "/products"
-    },
-    {
       "src": "/(.*)",
-      "dest": "/"
+      "dest": "index.js"
     }
   ]
 }
